--- a/test.html
+++ b/test.html
@@ -123,8 +123,8 @@
 
         async loadAllFiles() {
           const files = [
-            'data/suzuki.json', 'data/yamaha.json', 'data/honda.json',
-            'data/kawasaki.json', 'data/china1.json', 'data/china2.json',
+            'data/suzuki.json', 'data/yamaha.json', 'data/honda1.json',
+            'data/kawasaki.json', 'data/honda2.json', 'data/china2.json',
             'data/china3.json', 'data/diverse.json'
           ];
 
