--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@
   <main class="flex-1 max-w-2xl mx-auto w-full px-6 py-10">
     <div x-data="priceSearch()">
       <h1 class="text-3xl font-bold text-gray-800 text-center mb-2">
-        Căutare Prețuri Piese China & Agro
+        Căutare Prețuri VDM
       </h1>
       <p class="text-center text-gray-600 mb-8 text-sm">
         Scrie codul exact sau parțial
